--- a/projeto/index.html
+++ b/projeto/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu Responsivo</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
     <link rel="stylesheet" href="../estilo/style.css" media="all" >
+    <link rel="stylesheet" href="/estilo/phone.css" media="screen and (min-width: 500px) and (max-width: 600px)">
 </head>
 <body>
     <header>
         <h1>
             Neymar da Silva Santos Júnior
         </h1>
+        <i class="material-icons">face</i>
         <menu>
             <ul>
                 <li><a href="../imagens/neymar santos old.jpg" target="neyimagem">Opção 1</a></li>
