--- a/projeto/index.html
+++ b/projeto/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu Responsivo</title>
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
-    <link rel="stylesheet" href="../estilo/style.css" media="all" >
-    <link rel="stylesheet" href="/estilo/phone.css" media="screen and (min-width: 500px) and (max-width: 600px)">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
+    <link rel="stylesheet" href="../estilo/style.css" media="all">
 </head>
 <body>
     <header>
         <h1>
             Neymar da Silva Santos Júnior
         </h1>
-        <i class="material-icons">face</i>
-        <menu>
+        <i id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu
+        </i>
+        <menu id="itens">
             <ul>
                 <li><a href="../imagens/neymar santos old.jpg" target="neyimagem">Opção 1</a></li>
                 <li><a href="../imagens/neymar barça.jpg" target="neyimagem">Opção 2</a></li>
@@ -49,5 +49,15 @@
                 </p>
             </article>
         </main>
+        <script>
+            function clickMenu() {
+                if (itens.style.display == 'block') {
+                    itens.style.display = 'none'
+                } else {
+                    itens.style.display = 'block'
+                }
+                
+            }
+        </script>
 </body>
 </html>
